[package]
name = "vipers"
version = "1.0.0"
description = "Assorted checks and validations for writing safer Solana programs."
homepage = "https://saber.so"
repository = "https://github.com/saber-hq/vipers"
authors = ["Saber Team <team@saber.so>"]
license = "Apache-2.0"
edition = "2018"
exclude = ["images/"]

[dependencies]
anchor-lang = "0.15.0"
anchor-spl = "0.16.2"
spl-associated-token-account = { version = "1.0.3", features = [
    "no-entrypoint"
] }
solana-program = "1.7.8"
