[package]
name = "vipers"
version = "1.5.9"
description = "Assorted checks and validations for writing safer Solana programs."
homepage = "https://saber.so"
repository = "https://github.com/saber-hq/vipers"
authors = ["Saber Team <team@saber.so>"]
license = "Apache-2.0"
edition = "2021"
readme = "../README.md"
keywords = ["solana", "saber", "anchor"]

[dependencies]
anchor-lang = ">=0.17.0"
anchor-spl = ">=0.17.0"
spl-associated-token-account = { version = "^1.0.3", features = [
    "no-entrypoint"
] }

[dev-dependencies]
spl-token = { version = "^3.3.0", features = ["no-entrypoint"] }
static-pubkey = "^1.0.2"
