[package]
name = "vipers"
version = "2.0.6"
description = "Assorted checks and validations for writing safer Solana programs."
homepage = "https://saber.so"
repository = "https://github.com/saber-hq/vipers"
authors = ["Saber Team <team@saber.so>"]
license = "Apache-2.0"
edition = "2021"
readme = "../README.md"
keywords = ["solana", "saber", "anchor"]

[features]
default = ["show-error-locations"]
ata = ["spl-associated-token-account"]
show-error-locations = []

[dependencies]
anchor-lang = ">=0.22, <=0.25"
anchor-spl = ">=0.22, <=0.25"
num-traits = "^0.2.14"
spl-associated-token-account = { version = "^1.0.3", features = [
    "no-entrypoint"
], optional = true }

[dev-dependencies]
spl-token = { version = "^3", features = ["no-entrypoint"] }
static-pubkey = "^1.0.3"
