[package]
name = "vipers-tests"
version = "0.1.0"
description = "Vipers tests."
homepage = "https://saber.so"
repository = "https://github.com/saber-hq/vipers"
authors = ["Saber Team <team@saber.so>"]
license = "Apache-2.0"
edition = "2021"
keywords = ["solana", "saber", "anchor"]

[dependencies]
anchor-lang = "^0.23"
anchor-spl = "^0.23"
vipers = { path = "../../vipers", version = "^2", features = [
    "spl-associated-token-account"
] }

[dev-dependencies]
spl-token = { version = "^3", features = ["no-entrypoint"] }
